
2012-March-25 Struan Robertson

	* Project and Makefile updates for new classes.

	* Baselines updates.
	  
2012-March-24 Struan Robertson

	* DefinedSumOfStates.cpp: New class added to read, e.g. FTST sums of states.
	  
	* UnitTests.cpp: New class added to allow the running of internal checks.  

	* examples: Added HO + NO -> HONO example.  

2012-March-24 Struan Robertson

	* Documentation update: Material added regarding parameter constraints.  

2012-March-21 Struan Robertson

	* FittingUtil.cpp/.h, Rdouble.cpp/.h: Simplified parameter constraint 
	map and added member datum to Rdouble that points to XML location.  

2012-March-20 Struan Robertson

	* FittingUtil.cpp/.h: Altered so that constrained parameter values
	are written to the error channel during a fitting run.  

2012-March-15 Struan Robertson

	* FittingUtil.cpp/.h, Rdouble.cpp/.h: Constrained parameters: added 
	error checking and parameter writing.  

2012-March-15 Struan Robertson

	* FittingUtil.cpp/.h, Rdouble.cpp/.h: Added first pass implementation 
	of parameter constraints.  

2012-March-12 Struan Robertson

	* FittingUtil.cpp/.h, Rdouble.cpp/.h: Added a class and containers to
	hold information regarding parameter constraints.  

2012-March-11 Struan Robertson

	* Rdouble.cpp/.h: Added a general Rdouble range setting method, and 
	propagated it to other classes, as part of the refactoring needed to 
	implement parameter constraints.  

2012-February-17 Struan Robertson

	* TMatrix.h: Altered includes to address template compilation issue on 
	RHEL 6/g++ 4.4.6.  

2012-February-10 Chris Morley

	* MesmerQA/Acetyl O2 association/baselines/Win32/mesmer.test,
	MesmerQA/Acetyl O2 association/baselines/Win32/readme.txt
	Update WIN32 baseline and add note that it is for Release version;
	Debug version is slightly different.
	
	* Windows VC10/distribution/NSISScriptToCreateInstaller.nsi:
	After much struggling, I think this now installs and uninstalls ok on
	Window 7, at least.
